Fixed All Table CSS so they align with each other

--- a/Soundwaves/Soundwaves/src/main/resources/static/css/styles.css
+++ b/Soundwaves/Soundwaves/src/main/resources/static/css/styles.css
@@ -1225,7 +1225,7 @@ table {
 }
 
 th,
-ttd {
+td {
     text-align: left;
     padding: 0.5rem;
 }
@@ -1401,24 +1401,23 @@ th {
   }
 
 /* Account page CSS - ayub */
-h4{
+.account-h4{
     font-size:large;
     text-align: center;
 }
 
-p{
+.account-p{
     text-align: center;
 }
 .userPage-link{
     text-align: center;
 }
 
-.admin-recent-orders table{
+.user-recent-orders table{
     background: var(--p2-colour);
     width: 100%;
     border-radius: 2rem;
     padding: 1.8rem;
-    text-align: center;
     box-shadow: 0 1rem 2rem var(--p2-colour);
     transition: all 300ms ease;
 }
